crates/ars-components/src/utility/download_trigger/snapshots/ars_components__utility__download_trigger__tests__download_trigger_root_disabled.snap
---
source: crates/ars-components/src/utility/download_trigger.rs
expression: "snapshot_attrs(&api(Props::new().id(\"dl-dis\").href(\"https://ex.org/a.png\").document_origin(\"https://ex.org\").disabled(true),).root_attrs(),)"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "download-trigger",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Download file",
            ),
        ),
        (
            Id,
            String(
                "dl-dis",
            ),
        ),
        (
            Download,
            Bool(
                true,
            ),
        ),
        (
            Href,
            String(
                "https://ex.org/a.png",
            ),
        ),
    ],
    styles: [],
}
