crates/ars-components/src/utility/download_trigger/snapshots/ars_components__utility__download_trigger__tests__download_trigger_root_same_origin_bool_download.snap
---
source: crates/ars-components/src/utility/download_trigger.rs
expression: "snapshot_attrs(&api(Props::new().id(\"dl-sb\").href(\"./asset.bin\").document_origin(\"https://ignored.example\"),).root_attrs(),)"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "download-trigger",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Download file",
            ),
        ),
        (
            Id,
            String(
                "dl-sb",
            ),
        ),
        (
            Download,
            Bool(
                true,
            ),
        ),
        (
            Href,
            String(
                "./asset.bin",
            ),
        ),
    ],
    styles: [],
}
